--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "ant-design-vue": "^4.2.6",
+    "axios": "^1.7.9",
+    "nprogress": "^0.2.0",
     "pinia": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:"
@@ -40,6 +44,7 @@
     "postcss": "^8.4.49",
     "start-server-and-test": "^2.0.8",
     "tailwindcss": "^3.4.16",
+    "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.1",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
