--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,8 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
     "nprogress": "^0.2.0",
     "pinia": "catalog:",
     "vue": "catalog:",
