--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@vueuse/core": "^12.1.0",
+    "ajv": "^8.17.1",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
+    "json-schema": "^0.4.0",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "catalog:",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
+    "@types/json-schema": "^7.0.15",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.9.3",
     "@types/nprogress": "^0.2.3",
