feat(模块): 添加插件商城项目

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "dev": "pnpm -F ui dev",
+    "dev:plugin": "pnpm -F plugin-store dev",
     "prepare": "husky",
     "commit": "git-cz",
     "release": "standard-version",
