--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -32,6 +32,7 @@
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.12",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/json-schema": "^7.0.15",
@@ -45,15 +46,13 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
     "cypress": "^13.16.0",
     "eslint-plugin-cypress": "catalog:",
     "eslint-plugin-vue": "catalog:",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
-    "postcss": "^8.4.49",
     "start-server-and-test": "^2.0.8",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.0.12",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.1",
     "vitest": "^2.1.5",
