chore(模块): 使用catalog统一包版本管理

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "catalog:",
     "lint-staged": "catalog:",
     "prettier": "catalog:",
+    "rimraf": "^5.0.1",
     "standard-version": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "catalog:"
