--- a/apps/plugin-store/package.json
+++ b/apps/plugin-store/package.json
@@ -17,37 +17,34 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^3.0.1",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "pinia": "catalog:",
+    "vue": "catalog:",
+    "vue-router": "catalog:"
   },
   "devDependencies": {
-    "@playwright/test": "^1.51.0",
-    "@tailwindcss/vite": "^4.0.12",
-    "@tsconfig/node22": "^22.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.9",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vitest/eslint-plugin": "^1.1.36",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-oxlint": "^0.15.13",
-    "eslint-plugin-playwright": "^2.2.0",
-    "eslint-plugin-vue": "~10.0.0",
-    "jiti": "^2.4.2",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.15.13",
-    "prettier": "3.5.3",
-    "tailwindcss": "^4.0.12",
-    "typescript": "~5.8.0",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8",
-    "vue-tsc": "^2.2.8"
+    "@playwright/test": "catalog:playwright",
+    "@tailwindcss/vite": "catalog:tailwindcss",
+    "@tsconfig/node22": "catalog:types",
+    "@types/jsdom": "catalog:types",
+    "@types/node": "catalog:types",
+    "@vitejs/plugin-vue": "catalog:vitejs",
+    "@vitejs/plugin-vue-jsx": "catalog:vitejs",
+    "@vitest/eslint-plugin": "catalog:vitest",
+    "@vue/eslint-config-prettier": "catalog:vue",
+    "@vue/eslint-config-typescript": "catalog:vue",
+    "@vue/test-utils": "catalog:vue",
+    "@vue/tsconfig": "catalog:vue",
+    "eslint-plugin-oxlint": "catalog:",
+    "eslint-plugin-playwright": "catalog:",
+    "eslint-plugin-vue": "catalog:",
+    "jiti": "catalog:",
+    "jsdom": "catalog:",
+    "npm-run-all2": "catalog:",
+    "oxlint": "catalog:",
+    "tailwindcss": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:",
+    "vue-tsc": "catalog:"
   },
   "format": "prettier --write src/"
 }
