--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -8,54 +8,57 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+    "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
+    "lint:oxlint": "oxlint. --fix -D correctness --ignore-path.gitignore",
+    "lint:eslint": "eslint. --fix",
+    "lint": "run-s lint:*",
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^7.0.1",
-    "@vueuse/core": "^12.1.0",
-    "ajv": "^8.17.1",
-    "ant-design-vue": "^4.2.6",
-    "axios": "^1.7.9",
-    "dayjs": "^1.11.13",
-    "echarts": "^5.5.1",
-    "json-schema": "^0.4.0",
-    "lodash-es": "^4.17.21",
-    "nprogress": "^0.2.0",
+    "@ant-design/icons-vue": "catalog:ant-design",
+    "@vueuse/core": "catalog:vueuse",
+    "ajv": "catalog:",
+    "ant-design-vue": "catalog:",
+    "axios": "catalog:",
+    "dayjs": "catalog:",
+    "echarts": "catalog:",
+    "json-schema": "catalog:",
+    "lodash-es": "catalog:",
+    "nprogress": "catalog:",
     "pinia": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.12",
-    "@tsconfig/node22": "^22.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/json-schema": "^7.0.15",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.9.3",
-    "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vitest/eslint-plugin": "1.1.10",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "cypress": "^13.16.0",
-    "eslint-plugin-cypress": "catalog:",
+    "@playwright/test": "catalog:playwright",
+    "@tailwindcss/vite": "catalog:tailwindcss",
+    "@tsconfig/node22": "catalog:types",
+    "@types/jsdom": "catalog:types",
+    "@types/json-schema": "catalog:types",
+    "@types/lodash-es": "catalog:types",
+    "@types/node": "catalog:types",
+    "@types/nprogress": "catalog:types",
+    "@vitejs/plugin-vue": "catalog:vitejs",
+    "@vitejs/plugin-vue-jsx": "catalog:vitejs",
+    "@vitest/eslint-plugin": "catalog:vitest",
+    "@vue/eslint-config-prettier": "catalog:vue",
+    "@vue/eslint-config-typescript": "catalog:vue",
+    "@vue/test-utils": "catalog:vue",
+    "@vue/tsconfig": "catalog:vue",
+    "eslint-plugin-oxlint": "catalog:",
+    "eslint-plugin-playwright": "catalog:",
     "eslint-plugin-vue": "catalog:",
-    "jsdom": "^25.0.1",
-    "npm-run-all2": "^7.0.1",
-    "start-server-and-test": "^2.0.8",
-    "tailwindcss": "^4.0.12",
+    "jiti": "catalog:",
+    "jsdom": "catalog:",
+    "npm-run-all2": "catalog:",
+    "oxlint": "catalog:",
+    "tailwindcss": "catalog:",
     "unplugin-vue-components": "^0.27.5",
-    "vite": "^6.0.1",
-    "vitest": "^2.1.5",
-    "vue-tsc": "^2.1.10"
+    "vite": "catalog:",
+    "vitest": "catalog:",
+    "vue-tsc": "catalog:"
   }
 }
