--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,21 +4,65 @@ packages:
 
 catalog:
   vue: ^3.5.13
-  vue-router: ^4.4.5
-  pinia: ^2.2.6
-  axios: ^1.3.6
+  vue-router: ^4.5.0
+  pinia: ^3.0.1
+  axios: ^1.8.3
+  dayjs: ^1.11.13
+  echarts: ^5.6.0
+  ajv: ^8.17.1
+  json-schema: ^0.4.0
+  lodash-es: ^4.17.21
+  nprogress: ^0.2.0
+  vuedraggable: ^2.24.3
+  ant-design-vue: ^4.2.6
   # vue-i18n: ^9.2.0
 
-  typescript: ^5.7.2
-  # eslint
-  eslint: ^9.16.0
-  eslint-plugin-vue: ^9.32.0
-  eslint-plugin-cypress: ^4.1.0
+  # dev
+  typescript: ~5.8.0
+  eslint: ^9.21.0
+  eslint-plugin-vue: ~10.0.0
+  eslint-plugin-oxlint: ^0.15.13
+  eslint-plugin-playwright: ^2.2.0
   typescript-eslint: ^8.17.0
-  prettier: ^3.4.2
+  prettier: ^3.5.3
+  jsdom: ^26.0.0
+  vite: ^6.2.1
+  vitest: ^3.0.8
+  vue-tsc: ^2.2.8
+  tailwindcss: ^4.0.13
+  npm-run-all2: ^7.0.2
+  jiti: ^2.4.2
+  oxlint: ^0.15.13
 
   #
   husky: ^9.1.7
   lint-staged: ^15.2.10
   commitizen: ^4.3.1
   standard-version: ^9.5.0
+
+catalogs:
+  vue:
+    "@vue/eslint-config-prettier": ^10.2.0
+    "@vue/eslint-config-typescript": ^14.5.0
+    "@vue/test-utils": ^2.4.6
+    "@vue/tsconfig": ^0.7.0
+  types:
+    "@types/json-schema": ^7.0.15
+    "@types/lodash-es": ^4.17.12
+    "@types/node": ^22.13.10
+    "@types/nprogress": ^0.2.3
+    "@types/jsdom": ^21.1.7
+    "@tsconfig/node22": ^22.0.0
+  vitejs:
+    "@vitejs/plugin-vue": ^5.2.1
+    "@vitejs/plugin-vue-jsx": ^4.1.1
+  playwright:
+    "@playwright/test": ^1.51.0
+  tailwindcss:
+    "@tailwindcss/vite": ^4.0.13
+  ant-design:
+    "@ant-design/icons-vue": ^7.0.1
+  vueuse:
+    "@vueuse/core": ^12.8.2
+  vitest:
+    "@vitest/eslint-plugin": ^1.1.36
