chore(配置): 修改 tailwindcss 配置以及其他包的版本

--- a/apps/plugin-store/package.json
+++ b/apps/plugin-store/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@playwright/test": "catalog:playwright",
-    "@tailwindcss/vite": "catalog:tailwindcss",
+    "autoprefixer": "catalog:",
     "@tsconfig/node22": "catalog:types",
     "@types/jsdom": "catalog:types",
     "@types/node": "catalog:types",
