--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@playwright/test": "catalog:playwright",
-    "@tailwindcss/vite": "catalog:tailwindcss",
+    "autoprefixer": "catalog:",
     "@tsconfig/node22": "catalog:types",
     "@types/jsdom": "catalog:types",
     "@types/json-schema": "catalog:types",
