--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -29,7 +29,8 @@ catalog:
   vite: ^6.2.1
   vitest: ^3.0.8
   vue-tsc: ^2.2.8
-  tailwindcss: ^4.0.13
+  tailwindcss: ^3.4.17
+  autoprefixer: ^10.4.18
   npm-run-all2: ^7.0.2
   jiti: ^2.4.2
   oxlint: ^0.15.13
@@ -42,27 +43,25 @@ catalog:
 
 catalogs:
   vue:
-    "@vue/eslint-config-prettier": ^10.2.0
-    "@vue/eslint-config-typescript": ^14.5.0
-    "@vue/test-utils": ^2.4.6
-    "@vue/tsconfig": ^0.7.0
+    '@vue/eslint-config-prettier': ^10.2.0
+    '@vue/eslint-config-typescript': ^14.5.0
+    '@vue/test-utils': ^2.4.6
+    '@vue/tsconfig': ^0.7.0
   types:
-    "@types/json-schema": ^7.0.15
-    "@types/lodash-es": ^4.17.12
-    "@types/node": ^22.13.10
-    "@types/nprogress": ^0.2.3
-    "@types/jsdom": ^21.1.7
-    "@tsconfig/node22": ^22.0.0
+    '@types/json-schema': ^7.0.15
+    '@types/lodash-es': ^4.17.12
+    '@types/node': ^22.13.10
+    '@types/nprogress': ^0.2.3
+    '@types/jsdom': ^21.1.7
+    '@tsconfig/node22': ^22.0.0
   vitejs:
-    "@vitejs/plugin-vue": ^5.2.1
-    "@vitejs/plugin-vue-jsx": ^4.1.1
+    '@vitejs/plugin-vue': ^5.2.1
+    '@vitejs/plugin-vue-jsx': ^4.1.1
   playwright:
-    "@playwright/test": ^1.51.0
-  tailwindcss:
-    "@tailwindcss/vite": ^4.0.13
+    '@playwright/test': ^1.51.0
   ant-design:
-    "@ant-design/icons-vue": ^7.0.1
+    '@ant-design/icons-vue': ^7.0.1
   vueuse:
-    "@vueuse/core": ^12.8.2
+    '@vueuse/core': ^12.8.2
   vitest:
-    "@vitest/eslint-plugin": ^1.1.36
+    '@vitest/eslint-plugin': ^1.1.36
